--- a/project/product/config/database.yml
+++ b/project/product/config/database.yml
@@ -5,13 +5,14 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
+  encoding: unicode
   pool: 5
-  timeout: 5000
+  timeout: 5000  
   username: postgres
   password: changeit
-  host: localhost
   port: 5432
+  host: localhost
 
 development:
   <<: *default
